testsuite/tests/properties/invalid_new/bad_type.lkt
import common

class BarNode: FooNode {
    fun prop(): MyStruct = MyStruct(a=12, b=false)
}
